Fixing opacity on mobile

--- a/stylesheets/image-title-desktop.scss
+++ b/stylesheets/image-title-desktop.scss
@@ -111,7 +111,7 @@
       margin-bottom: 0px;
       position: absolute;
       top: 90px;
-      left: 40px;
+      left: -50px;
       height: 54px;
       width: 220px;
     }
@@ -125,7 +125,7 @@
       margin-bottom: 0px;
       position: absolute;
       top: 80px;
-      left: 40px;
+      left: -50px;
       font-size: 22px;
       z-index: 5;
       color: black;
