--- a/stylesheets/image-title-mobile.scss
+++ b/stylesheets/image-title-mobile.scss
@@ -1,81 +1,172 @@
 .s1 {
   position: relative;
-  img {
-    opacity: 0.3;
-    filter: alpha(opacity=40);
+  .connector {
+    img {
+      opacity: 0.3;
+      filter: alpha(opacity=40);
+    }
+    h2 {
+      margin-left: 0px;
+      margin-top: -235px;
+      margin-bottom: 80px;
+      text-align: center;
+      font-size: 20px;
+      z-index: 5;
+    }
   }
-  img:hover {
-    opacity: 1;
-  }
-  h2 {
-    margin-top: -155px;
-    margin-bottom: 80px;
-    text-align: center;
-    font-size: 20px;
-    z-index: 5;
+  .connector:hover {
+    img {
+      opacity: 1;
+    }
+    h2 {
+      position: absolute;
+      margin-top: -235px;
+      margin-bottom: 80px;
+      left: 76px;
+      font-size: 20px;
+      z-index: 5;
+      color: white;
+      padding: 5px;
+      background-color: black;
+      height: 100px;
+      width: 250px;
+    }
   }
 }
 .s4 {
   position: relative;
-  img {
-    opacity: 1;
+  .connector {
+    img {
+      opacity: 1;
+    }
+    h3 {
+      position: absolute;
+      left: 90px;
+      margin-top: -265px;
+      margin-bottom: 118px;
+      font-size: 18px;
+      color: white;
+      background-color: black;
+      height: 55px;
+      width: 220px;
+    }
   }
-  img:hover {
-    opacity: 0.4;
-  }
-  h3 {
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: -155px;
-    margin-bottom: 118px;
-    font-size: 18px;
+  .connector:hover {
+    img {
+      opacity: 0.4;
+    }
+    h3 {
+      position: absolute;
+      margin-top: -265px;
+      margin-bottom: 118px;
+      left: 82px;
+      font-size: 22px;
+      z-index: 5;
+      color: black;
+      background-color: inherit;
+      height: 100px;
+      width: 240px;
+    }
   }
 }
 .s5 {
   position: relative;
-  img {
-    opacity: 0.3;
-    filter: alpha(opacity=40);
+  .connector {
+    img {
+      opacity: 0.4;
+      filter: alpha(opacity=40);
+    }
+    h2 {
+      margin-top: -255px;
+      margin-left: 0px;
+      margin-bottom: 86px;
+      text-align: center;
+      font-size: 20px;
+    }
   }
-  img:hover {
-    opacity: 1;
-  }
-  h2 {
-    margin-top: -155px;
-    margin-bottom: 86px;
-    text-align: center;
-    font-size: 20px;
+  .connector:hover {
+    img {
+      opacity: 1;
+    }
+    h2 {
+      position: absolute;
+      margin-top: -255px;
+      margin-bottom: 80px;
+      left: 85px;
+      font-size: 20px;
+      z-index: 5;
+      color: white;
+      padding: 5px;
+      background-color: black;
+      height: 100px;
+      width: 230px;
+    }
   }
 }
 .s2 {
   position: relative;
-  img {
-    opacity: 1;
+  .connector {
+    img {
+      opacity: 1;
+    }
+    h3 {
+      /*position: absolute;*/
+      margin-left: 95px;
+      margin-top: -230px;
+      margin-bottom: 80px;
+      text-align: center;
+      font-size: 18px;
+    }
   }
-  img:hover {
-    opacity: 0.4;
-  }
-  h3 {
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: -145px;
-    margin-bottom: 118px;
-    font-size: 18px;
+  .connector:hover {
+    img {
+      opacity: 0.4;
+    }
+    h3 {
+      position: absolute;
+      margin-top: -235px;
+      margin-bottom: 80px;
+      left: -4px;
+      font-size: 22px;
+      z-index: 5;
+      color: black;
+      background-color: inherit;
+      height: 100px;
+      width: 240px;
+    }
   }
 }
 .s3 {
   position: relative;
-  img {
-    opacity: 0.3;
-    filter: alpha(opacity=40);
+  .connector {
+    img {
+      opacity: 0.3;
+      filter: alpha(opacity=40);
+    }
+    h2 {
+      margin-left: 5px;
+      margin-top: -260px;
+      margin-bottom: 90px;
+      text-align: center;
+      font-size: 20px;
+    }
   }
-  img:hover {
-    opacity: 1;
-  }
-  h2 {
-    margin-top: -155px;
-    margin-bottom: 120px;
-    text-align: center;
-    font-size: 20px;
+  .connector:hover {
+    img {
+      opacity: 1;
+    }
+    h2 {
+      position: absolute;
+      margin-top: -260px;
+      margin-bottom: 130px;
+      left: 80px;
+      font-size: 20px;
+      z-index: 5;
+      color: white;
+      padding: 5px;
+      background-color: black;
+      height: 125px;
+      width: 230px;
+    }
   }
 }
