--- a/stylesheets/layout_mobile.scss
+++ b/stylesheets/layout_mobile.scss
@@ -47,7 +47,7 @@
         position: absolute;
         top: 0;
         margin-right:0;
-        left: 72.4%;
+        left: 72.6%;
         right: 40%;
         height: 50px;
         width: 50px;
@@ -67,6 +67,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-top: -218px;
+        margin-bottom: 92px;
         height: 208px;
         width: 280px;
       }
@@ -76,7 +77,7 @@
         z-index: 4;
         position: absolute;
         top: 0px;
-        left: 72.4%;
+        left: 72.9%;
         height: 50px;
         width: 50px;
         background-color: white;
@@ -86,7 +87,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 10px;
-        margin-top: 0px;
+        margin-top: -70px;
         height: 208px;
         width: 280px;
         background-color: white;
@@ -95,6 +96,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-top: -218px;
+        margin-bottom: 126px;
         height: 210px;
         width: 280px;
       }
@@ -104,7 +106,7 @@
         z-index: 4;
         position: absolute;
         top: 0px;
-        left: 72.4%;
+        left: 72.9%;
         height: 50px;
         width: 50px;
         background-color: white;
@@ -114,7 +116,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 10px;
-        margin-top: 0px;
+        margin-top: -105px;
         height: 208px;
         width: 280px;
         background-color: white;
@@ -123,6 +125,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-top: -218px;
+        margin-bottom: 94px;
         height: 210px;
         width: 280px;
       }
@@ -134,7 +137,7 @@
         z-index: 4;
         position: absolute;
         top: 0px;
-        left: 72.4%;
+        left: 72.9%;
         height: 50px;
         width: 50px;
         background-color: white;
@@ -144,7 +147,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 10px;
-        margin-top: 0px;
+        margin-top: -75px;
         height: 208px;
         width: 280px;
         background-color: white;
@@ -153,6 +156,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-top: -218px;
+        margin-bottom: 90px;
         height: 210px;
         width: 280px;
       }
@@ -162,7 +166,7 @@
         z-index: 4;
         position: absolute;
         top: 0px;
-        left: 72.4%;
+        left: 72.9%;
         height: 50px;
         width: 50px;
         background-color: white;
@@ -172,7 +176,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 10px;
-        margin-top: 0px;
+        margin-top: -67px;
         height: 208px;
         width: 280px;
         background-color: white;
@@ -181,6 +185,7 @@
         margin-right: auto;
         margin-left: auto;
         margin-top: -218px;
+        margin-bottom: 100px;
         height: 210px;
         width: 280px;
       }
@@ -195,7 +200,8 @@
   /*text-align: center;*/
   img {
     margin: 20px;
-    margin-left: 5px;
+    margin-top: -70px;
+    margin-left: 20px;
     width: 300px;
     height: 200px;
   }
